Change & Credit Log

  Version 1.1.0

    - Made Simple User Folder instances ObjectManagers.
      This means configuration methods can now be put in
      the Simpler User Folder, rather than the 
      Simple User Folder's container

    - Renamed 'getUserNames' configuration method to
      'getUserIds' to avoid a name clash brought on
      by the addition of ObjectManager functionality

    - Catered for getUserDetails raising an exception or 
      returning rubbish in a graceful way

    - Documented and tested for the case where editUser is 
      called with a password of None

    - Enabled UsageBase class to test implementations that
      stored encrypted passwords

    - Tidied up tests, SQL tests in particular

    Credits
   
      Chris Withers -- Development work.

  Version 0.9.0

    - Improved documentation

    - Corrected security declaration for getUserNames

    - Added getUsers method

    Credits

      Chris Withers   -- Development work and improved
                         documentation. Also documented one way
                         encyption usage.

      Charlie Reiman  -- Reported typo in security declaration for
                         getUserNames.

      Olivier Deckmyn -- Pointed out documentation that needed 
                         clarifying.  
      
      Stefan Holek    -- Suggested the implementation of the getUsers
                         method.

  Version 0.8.0

    Initial release

    Credits
    
      Chris Withers -- Development work.

Stuff still to be done:

  - Support for SUF containing things
  - Support for authenticate method
  - Support for authorisation?
  - Support for computed local roles.
  - Documentation of caching of method results.
  - Examples for how to use
  - Provide HTML documentation?
    
                