@@ -2,6 +2,6 @@
 Connection_id : sufdb
 arguments:
 </dtml-comment>
-create table users (name varchar, password varchar)
+create table users (name varchar, password varchar, extra1 varchar, extra2 integer)
 <dtml-var sql_delimiter>
 create table roles (name varchar, role varchar)
