@@ -11,7 +11,6 @@ import Globals
 from base import UsageBase, test_dir
 from unittest import makeSuite,main
 from os.path import abspath
-from dummyUserSource import dummyUserFolder
 
 from Products.PythonScripts.PythonScript import manage_addPythonScript
 
@@ -25,9 +24,10 @@ def addPythonScript(obj,id):
 
 class Tests(UsageBase):
 
-    def _setup(self):
+    def _setup(self,f=None):
 
-        f = self.folder
+        if f is None:
+            f = self.folder
         # config
         addPythonScript(f,'addUser')
         addPythonScript(f,'deleteUser')
@@ -35,9 +35,18 @@ class Tests(UsageBase):
         addPythonScript(f,'getUserDetails')
         addPythonScript(f,'getUserIds')
         self.users = f
+        
         # initial users
         f.addUser('test_user', 'password',[])
 
+        username = 'test_user_with_extras'
+        f.manage_addDTMLDocument(id=username,title='')
+        user = getattr(f,username)
+        user.manage_addProperty('password','password','string')
+        user.manage_addProperty('roles',[],'lines')
+        user.extra = {'extra1':'extra1value',
+                      'extra2':2}
+        
 def test_suite():
     return makeSuite(Tests)
 
