@@ -17,6 +17,20 @@ from dummyUserSource import User
 
 from Products.ZSQLMethods.SQL import SQL
 
+# monkeypatch Result.dictionaries to cater for gadfly
+from Shared.DC.ZRDB.Results import Results, NoBrains
+
+original__init__ = Results.__init__
+
+def __init__(self,(items,data),brains=NoBrains, parent=None,
+             zbrains=None):
+    for item in items:
+        item['name'] = item['name'].lower()
+    original__init__(self,(items,data),brains=NoBrains, parent=None,
+                     zbrains=None)
+
+Results.__init__ = __init__
+
 def addSQLMethod(obj,id):
     f=open(test_dir+'/'+id+'.sql')     
     data=f.read()     
@@ -117,8 +131,14 @@ class Tests(UsageBase):
         # initial users
         f.addUser(name='test_user',password='password',roles=[])
 
-        self.users = SQLUsers(f)
+        f.addUser(name='test_user_with_extras',
+                  password='password',
+                  roles=[],
+                  extra1='extra1value',
+                  extra2=2)
 
+        self.users = SQLUsers(f)
+        
     def tearDown(self):
         UsageBase.tearDown(self)
         rmtree(self.gf_dir)
